src/test/ui/traits/traits-inductive-overflow-supertrait-oibit.stderr
error[E0568]: auto traits cannot have super traits
  --> $DIR/traits-inductive-overflow-supertrait-oibit.rs:7:19
   |
LL | auto trait Magic: Copy {}
   |            -----  ^^^^ help: remove the super traits
   |            |
   |            auto trait cannot have super traits

error[E0277]: the trait bound `NoClone: std::marker::Copy` is not satisfied
  --> $DIR/traits-inductive-overflow-supertrait-oibit.rs:15:23
   |
LL | fn copy<T: Magic>(x: T) -> (T, T) { (x, x) }
   |    ----    ----- required by this bound in `copy`
...
LL |     let (a, b) = copy(NoClone);
   |                       ^^^^^^^ the trait `std::marker::Copy` is not implemented for `NoClone`
   |
   = note: required because of the requirements on the impl of `Magic` for `NoClone`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0568.
For more information about an error, try `rustc --explain E0277`.
